tests/ui/resolve/import_conflicts.stderr
error: identifier `MyUdvt` already declared
  --> ROOT/tests/ui/resolve/import_conflicts.sol:LL:CC
   |
LL | import {MyUdvt, MyUdvt as MyUdvt} from "./auxiliary/udvt.sol";
   |         ------ previous declaration declared here
...
LL | import "./auxiliary/udvt.sol" as MyUdvt;
   |                                  ^^^^^^

error: aborting due to 1 previous error

